--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "1.0.0-rc",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -38,7 +38,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "sel-product-card",
+  "name": "sel-product-card-react-ts",
   "author": "gamersanti19@gmail.com",
   "module": "dist/sel-product-card.esm.js",
   "size-limit": [
